kubernetes/apps/default/nas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
  namespace: default
subsets:
  - addresses:
      - ip: 10.69.1.157
    ports:
      - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
  namespace: default
subsets:
  - addresses:
      - ip: 10.69.1.1
    ports:
      - port: 443
